--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "displayName": "ds-json",
   "description": "Language support for JSON-based DataScript.",
   "version": "0.0.1",
+  "license": "MIT",
+  "repository": {
+    "url": "https://github.com/mrpedrobraga/godot-datascript-3.x.git"
+  },
   "engines": {
     "vscode": "^1.83.0"
   },
@@ -10,16 +14,25 @@
     "Programming Languages"
   ],
   "contributes": {
-    "languages": [{
-      "id": "ds-json",
-      "aliases": ["Datascript (JSON)", "ds-json"],
-      "extensions": [".ds.json"],
-      "configuration": "./language-configuration.json"
-    }],
-    "grammars": [{
-      "language": "ds-json",
-      "scopeName": "source.ds-json",
-      "path": "./syntaxes/ds-json.tmLanguage.json"
-    }]
+    "languages": [
+      {
+        "id": "ds-json",
+        "aliases": [
+          "Datascript (JSON)",
+          "ds-json"
+        ],
+        "extensions": [
+          ".ds.json"
+        ],
+        "configuration": "./language-configuration.json"
+      }
+    ],
+    "grammars": [
+      {
+        "language": "ds-json",
+        "scopeName": "source.ds-json",
+        "path": "./syntaxes/ds-json.tmLanguage.json"
+      }
+    ]
   }
 }
